# bakkie

./: Cargo.toml  README.md  digest  jsonrpc-examples.jsonl  mcp_handshake_example.jsonl  prefix.log.2025-07-07-14
.github/workflows/: test.yml
bakkie/: Cargo.toml
bakkie/src/: codec.rs  framing.rs  lib.rs  proto.rs  provisions.rs  server.rs  tool.rs  tools.rs
bakkie/src/proto/: V20250618.rs  mod.rs
bakkie/src/provisions/: mod.rs  tools.rs
bakkie/testdata/: basic  claude_ask_for_tools.json  claude_hello.json  claude_notify.json
bakkie/tests/: derive.rs  e2e.rs  init.rs  rag.rs  replay.rs  tool_usage.rs  tools.rs
bakkie/tests/snapshots/: derive__call_derived_tool.snap  e2e__server_hello.snap.new  tools__serialize.snap
bakkie/tests/static/: init.json  ni.json
bakkie_derive/: Cargo.toml
bakkie_derive/src/: lib.rs
bakkie_derive/tests/: meta.rs  structured.rs  test_tool_generation.rs  trybuild.rs  wrap_app.rs
bakkie_derive/tests/snapshots/: structured__can_obtain_json_schema.snap
bakkie_derive/tests/ui/fail/: app_attribute_on_complex_path.rs  app_attribute_on_complex_path.stderr  app_attribute_on_non_app_type.rs  app_attribute_on_non_app_type.stderr  app_attribute_on_reference_type.rs  app_attribute_on_reference_type.stderr  app_attribute_on_tuple_type.rs  app_attribute_on_tuple_type.stderr  app_with_const_param.rs  app_with_const_param.stderr  app_with_lifetime_param.rs  app_with_lifetime_param.stderr  app_with_multiple_generic_params.rs  app_with_multiple_generic_params.stderr  app_with_no_generic_params.rs  app_with_no_generic_params.stderr  tool_boolean_value.rs  tool_boolean_value.stderr  tool_duplicate_app_attribute.rs  tool_duplicate_app_attribute.stderr  tool_duplicate_attribute.rs  tool_duplicate_attribute.stderr  tool_empty_args_invalid_syntax.rs  tool_empty_args_invalid_syntax.stderr  tool_invalid_attribute_key.rs  tool_invalid_attribute_key.stderr  tool_malformed_syntax.rs  tool_malformed_syntax.stderr  tool_non_string_value.rs  tool_non_string_value.stderr  tool_on_enum.rs  tool_on_enum.stderr  tool_on_method.rs  tool_on_method.stderr  tool_on_method_mut_self.rs  tool_on_method_mut_self.stderr  tool_on_method_self.rs  tool_on_method_self.stderr  tool_on_struct.rs  tool_on_struct.stderr  (+8 more)
bakkie_derive/tests/ui/pass/: tool_on_function.rs  tool_with_args.rs  tool_with_custom_app_param.rs
bakkie_schema/: Cargo.toml
bakkie_schema/src/: helpers.rs  lib.rs
bakkie_simple/: Cargo.toml
bakkie_simple/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
util/analyst/: Cargo.toml
util/analyst/src/: kak.xml  main.rs
util/digest/: Cargo.toml
util/digest/src/: main.rs
