[package]
name = "bakkie"
version = "0.1.0"
edition = "2024"
license = "Unlicense/MIT"
authors = ["Daniel Levin <daniellevin2607@gmail.com>"]
description = "Simple MCP server framework for Rust"
repository = "https://github.com/daniel-levin/bakkie"
homepage = "https://github.com/daniel-levin/bakkie"
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
bakkie_derive = "0.1"
bytes = "1.10.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
futures-util = "0.3"
bakkie_schema = "0.1"
schemars = "1.0.4"
tracing = "0.1"
futures = "0.3.31"
strum = { version = "0.27", features = ["derive"] }
monostate = "0.1.14"

[dev-dependencies]
anyhow = "1"
insta = { version = "1", features = ["serde", "json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-test = "0.4"
