[package]
name = "bakkie_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
convert_case = "0.6"

[dev-dependencies]
bakkie = "0.1"
serde_json = "1.0.40"
insta = { version = "1", features = ["serde", "json"] }
trybuild = "1.0"
