[package]
name = "bakkie_derive"
version = "0.1.0"
edition = "2024"
license = "Unlicense/MIT"
authors = ["Daniel Levin <daniellevin2607@gmail.com>"]
description = "Procedural macros for the bakkie MCP server framework"
repository = "https://github.com/daniel-levin/bakkie"
homepage = "https://github.com/daniel-levin/bakkie"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
bakkie = { path = "../bakkie" }
serde_json = "1.0.140"
insta = { version = "1", features = ["serde", "json"] }
trybuild = "1.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
